# ai-agent-orchestration

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
backend/: README.md
backend/app/: main.py  schemas.py
backend/app/api/: agents.py  channels.py  memory.py  runs.py  templates.py  tools.py  workflows.py
backend/app/channels/: telegram.py
backend/app/core/: config.py  llm.py
backend/app/db/: models.py  session.py
backend/app/memory/: base.py  embeddings.py  pgvector.py  qdrant.py
backend/app/runtime/: event_bus.py  executor.py  graph_builder.py
backend/app/templates/: catalog.py
backend/app/tools/: base.py  calculator.py  current_time.py  registry.py  text_stats.py  web_search.py
frontend/: README.md  streamlit_app.py
frontend/pages/: 1_Agents.py  2_Workflows.py  3_Memory.py  4_Runs.py  5_Telegram.py  6_Tools.py
frontend/ui/: api_client.py  components.py  graph.py  workflow_builder.py
scripts/: start.sh
tests/: conftest.py  test_agents.py  test_frontend_workflow_builder.py  test_graph_builder.py  test_memory.py  test_telegram.py  test_tools.py  test_ui_support.py  test_workflows.py
