[project]
name = "ai-agent-orchestration-platform"
version = "0.1.0"
description = "FastAPI + LangGraph backend for configurable multi-agent workflows."
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.36",
    "pydantic==2.10.4",
    "pydantic-settings==2.7.0",
    "langgraph==0.2.60",
    "langchain-google-genai==2.1.12",
    "langchain-openai==0.3.35",
    "httpx==0.28.1",
    "pandas==2.2.3",
    "python-dotenv==1.0.1",
    "psycopg[binary]==3.2.3",
    "requests==2.32.3",
    "streamlit==1.41.1",
    "fastembed>=0.6.0,<1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.setuptools.packages.find]
include = ["backend*", "frontend*"]
